tests/test_default/bad/empty.catala_en
## Article

```catala
declaration scope A:
  context x content integer
  context y content boolean

scope A:
  definition x equals 1
```

```catala-test-inline
$ catala Interpret -s A
[WARNING] In scope "A", the variable "x" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_default/bad/empty.catala_en:5.10-11:
└─┐
5 │   context x content integer
  │           ‾
  └─ Article
[WARNING] In scope "A", the variable "y" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_default/bad/empty.catala_en:6.10-11:
└─┐
6 │   context y content boolean
  │           ‾
  └─ Article
[ERROR] This variable evaluated to an empty term (no rule that defined it applied in this situation)

┌─⯈ tests/test_default/bad/empty.catala_en:6.10-11:
└─┐
6 │   context y content boolean
  │           ‾
  └─ Article
#return code 255#
```
